--- a/mortgage-repayment-calculator-main/css/style.css
+++ b/mortgage-repayment-calculator-main/css/style.css
@@ -11,6 +11,7 @@ div.container{
     height: 100vh;
     width: 100vw;
     background-color:  hsl(202, 86%, 94%);
+    position: relative;
 }
 
 .row{
@@ -19,12 +20,17 @@ div.container{
     align-items: center;
 }
 div.calculo{
+    padding-right: 50px;
+    padding-left:10px;
     display: flex;
     flex-direction: column;
     background-color: white;
     margin: 0 20px;
-    border-radius: 30px;
-    max-width: 720px;
+    border-radius: 30px 30px 0 30px;
+    width: 820px;
+    position: absolute;
+    top: 70px;
+    left: 50px;
 }
 .calculo h1{
     color: hsl(202, 55%, 16%);
@@ -50,9 +56,14 @@ div.calculo{
 }
 #valor-label{
     margin-left: 35px;
-    border: 1px solid black;
-   padding: 9px 0;
+    border: 2px solid hsl(200, 24%, 40%);
+    padding: 8px 0;
+    padding-right: 10px;
+    padding-left: 5px;
     border-right: none;
+    border-radius: 10px 0px 0px 10px;
+    background-color: hsl(202, 86%, 94%);
+    color: hsl(200, 24%, 40%);
 }
 .calculo h3{
     color: hsl(202, 55%, 16%);
@@ -64,27 +75,58 @@ div.calculo{
     width: 500px;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 5px;
     margin-right: 10px;
+    font-weight: bold;
+    color: hsl(200, 26%, 54%);
+    font-family: "Plus Jakarta Sans", sans-serif;
+    border:2px solid  hsl(200, 24%, 40%);
     border-left: none;
+    border-radius: 0px 10px 10px 0px;
+    transition: .2s;
    
 }
+.calculo input#valor:focus{
+    outline: none;
+    border:3px solid #D8DB2F;
+    border-left:none;
+}
+
 .calculo input#prazo, #juro{
     padding: 10px 0;
     margin-left: 15px;
+    border: 2px solid hsl(200, 24%, 40%);
+    border-right: none;
+    border-radius: 10px 0px 0px 10px;
+    font-weight: bold;
+    
+    color: hsl(200, 26%, 54%);
+    transition: .2s;
+}
+.calculo input#prazo:focus, #juro:focus{
+    outline: none;
+    border:3px solid #D8DB2F;
+    border-right:none;
 }
 #prazo-label, #juro-label{
     margin-top: 42px;
-    border: 1px solid black;
+    border: 2px solid hsl(200, 24%, 40%) ;
     border-left: none;
-    padding: 9px 0;
+    border-radius: 0px 10px 10px 0px;
+    padding: 8px 0;
+    background-color: hsl(202, 86%, 94%);
+    color: hsl(200, 24%, 40%);
+    padding-right: 10px;
+    padding-left: 10px;
 }
 .radio{
     cursor: pointer;
+    width: 500px;
     padding: 10px;
     margin-left: 32px;
     margin-right: 10px;
     margin-bottom: 5px;
-    border: 1px solid black;
+    border: 1px solid hsl(200, 24%, 40%) ;
     border-radius: 5px;
 }
 #Repayment-label, #juros-label{
@@ -122,10 +164,21 @@ input[type= radio]{
     justify-content: center;
     align-items: center;
     background-color: hsl(202, 55%, 16%);
+    color:white;
     margin: 0 20px;
-    border-radius: 30px;
+    border-radius: 30px 30px 30px 80px;
     max-width: 720px;
+    position: absolute;
+    top: 70px;
+    left: 640px;
 }
 .resultados img{
     width: 300px;
+}
+.resultados h1{
+    margin-bottom: 20px;
+}
+.resultados p{
+    padding-bottom: 50px;
+    text-align: center;
 }
