--- a/mortgage-repayment-calculator-main/css/style.css
+++ b/mortgage-repayment-calculator-main/css/style.css
@@ -313,6 +313,7 @@ input[type = "radio"]:checked + .label-radio::after{
         align-items: center;
     }
     div.calculo{
+        margin-top: 180px;
         padding-right: 50px;
         padding-left:10px;
         display: flex;
@@ -321,7 +322,7 @@ input[type = "radio"]:checked + .label-radio::after{
         margin: 0 20px;
         border-radius: 30px 30px 0 30px;
         width: 320px;
-        height: 350px;
+        height: 450px;
         position: absolute;
         top: 10px;
         left: 20px;
@@ -347,11 +348,11 @@ input[type = "radio"]:checked + .label-radio::after{
         padding: 5px;
         margin-right: 50px;
     }
-    .column{
-         display: flex;
-        justify-content: flex-start;
-        align-items: center;
-    }
+    .column {
+        display: flex;
+        flex-direction: column; /* Faz os elementos ficarem um abaixo do outro */
+        align-items: flex-start; /* Alinha à esquerda */
+      }
     #valor-label{
         margin-left: 15px;
         font-size: 12px;
@@ -371,6 +372,8 @@ input[type = "radio"]:checked + .label-radio::after{
         font-weight: bolder !important;
     }
     .calculo h3{
+        width: 100%;
+        text-align: left;
         color: hsl(202, 55%, 16%);
         font-size: 12px;
         padding: 5px;
@@ -378,7 +381,7 @@ input[type = "radio"]:checked + .label-radio::after{
         opacity: .8;
     }
     .calculo input#valor{
-        width: 110px;
+        width: 100%;
         padding-top: 1px;
         padding-bottom: 3px;
         padding-left: 0px;
@@ -397,9 +400,9 @@ input[type = "radio"]:checked + .label-radio::after{
         border-left:none;
     }
     .calculo input#prazo, #juro{
-        width: 110px;
+        width: 100%; /* O input vai ocupar 100% da largura disponível */
+        margin-left: 15px; 
         padding: 3px 0;
-        margin-left: 0px;
         border: 2px solid hsl(200, 24%, 40%);
         border-right: none;
         border-radius: 10px 0px 0px 10px;
@@ -414,17 +417,188 @@ input[type = "radio"]:checked + .label-radio::after{
         border-right:none;
     }
     #prazo-label, #juro-label{
-        margin-top: 10px;
+        margin-top: 25px; 
+        padding: 1px 0;
         border: 2px solid hsl(200, 24%, 40%) ;
         border-left: none;
         border-radius: 0px 10px 10px 0px;
-        padding: 3px 0;
+    
+        padding-bottom: 1px;
         background-color: hsl(202, 86%, 94%);
         color: hsl(200, 24%, 40%);
         padding-right: 7px;
         padding-left: 7px;
     }
+    .custom-label{
+        border: 3px solid #D8DB2F !important;
+        border-left: none !important;
+        background-color: #D8DB2F !important;
+        font-weight: bolder !important;
+    }
+    .radio{
+        cursor: pointer;
+        width: 100%;
+        padding: 10px;
+        margin-left: 32px;
+        margin-right: 10px;
+        margin-bottom: 5px;
+        border: 1px solid hsl(200, 24%, 40%) ;
+        border-radius: 5px;
+        transition: .5s;
+    }
+    .teste{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .radio:hover{
+        background-color: #D8DB2F;
+        color: hsl(202, 55%, 16%);
+        font-weight: bolder;
+        border: 1px solid #D8DB2F;
+        
+    }
+    #Repayment-label, #juros-label{
+        cursor: pointer;
+    }
+    input[type= radio]{
+        display: none;
+       
+    }
+    .label-radio{
+        display: inline-block;
+        position: relative;
+        padding-left: 25px;
+        margin-right: 10px;
+        cursor: pointer;
+        user-select: none;
+        font-size: 18px;
+    }
+    .label-radio::before{
+        content: "";
+        position: absolute;
+        left: 1px;
+        top: 4px;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        border: 1px solid #000;
+        background-color: #fff; 
+    }
+    input[type = "radio"]:checked + .label-radio::after{
+        content: "";
+        position: absolute;
+        left: 4px;
+        top: 7.5px;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: #D8DB2F;
+    }
+    #button-calc{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        cursor: pointer;
+        border: none;
+        border-radius: 20px;
+        width: 100%px;
+        background-color: #D8DB2F;
+        color: hsl(202, 55%, 16%);
+        padding: 8px 0;
+        font-size: 0.7rem;
+        font-weight: bold;
+        margin-top: 15px;
+        margin-left: 30px;
+        margin-bottom: 30px;
+        transition: .4s;
+    }
+    #button-calc:hover{
+        opacity: .7;
+    }
+    .resultados{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: hsl(202, 55%, 16%);
+        color:white;
+        margin: 0 20px;
+        border-radius: 30px 30px 30px 80px;
+        width: 320px;
+        height: 350px;
+        position: absolute;
+        top: 420px;
+        left: 20px;
+        transition: 1s;
+        margin-bottom: 15px;
+    }
+    .resultados img{
+        width: 150px;
+    }
+    .resultados h1{
+        margin-bottom: 20px;
+        font-size: 14px;
+    }
+    .resultados p{
+        padding-bottom: 50px;
+        text-align: center;
+    }
     .resultado-completo{
         display: none;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background-color: hsl(202, 55%, 16%);
+        color:white;
+        margin: 0 20px;
+        border-radius: 30px 30px 30px 80px;
+        width: 320px;
+        height: 350px;
+        position: absolute;
+        top: 420px;
+        left: 20px;
+        transition: 1s;
+        margin-bottom: 15px;
+    }
+    .resultado-completo h1{
+        padding-top: 10px;
+        font-size: 14px;
+        padding-bottom: 10px;
+    }
+    .resultado-completo p{
+        font-size: 10px;
+        margin-bottom: 50px;
+        opacity: .7;
+        width: 300px;
+    }
+    .result-numbers{
+        display: none;
+        flex-direction: column;
+        background-color: hsl(202, 58%, 10%);
+        margin-bottom: 95px;
+        padding:20px 0 20px 20px;
+        border-radius: 15px;
+        border-top: 6px solid #D8DB2F;
+    }
+    .result-numbers #number{
+        
+        color: #D8DB2F;
+        font-weight: bolder;
+        font-size: 20px;
+    }
+    .result-numbers hr{
+        border:1px solid grey;
+        margin: auto;
+        width: 50%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .result-numbers #number-white{
+        font-size: 15px;
+        padding-bottom:15px;
+        font-weight: bolder;
     }
 }
